2007-02-16  Dan Williams  <dcbw@redhat.com>

	Patch from Luca Ferretti

	* src/applet.c
		- (nma_constructor): remove glade_gnome_init, as it is deprecated
			(Gnome.org #402468)

2007-02-08  Dan Williams  <dcbw@redhat.com>

    Patch from Chris Aillon <caillon@redhat.com>

    * src/applet-compat.c
        - (convert_one_entry): Don't attempt to pass empty ESSID paths to GConf
            (RH #216502)

***** import from NetworkManager module *****